# ChromaGarden

./: package-lock.json  package.json  version.json
src/: App.tsx  CenterUI.tsx  LeftUI.tsx  RightUI.tsx  SettingsUI.tsx  export.tsx  photoshop.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  logging.json
src-tauri/src/: main.rs
src-tauri/updates/: version.json
src/adjustments/: adjustmentWorker.ts  manualTweakDispatch.ts  manualTweakPixelMath.ts
src/adjustments/blacks/: blacks-engine.ts  blacks.ts
src/adjustments/clarity/: clarity-engine.ts  clarity.ts
src/adjustments/contrast/: contrast-engine.ts  contrast.ts
src/adjustments/creative-curves/: color-separation-engine.ts  color-separation.ts  filmic-shoulder-engine.ts  filmic-shoulder.ts  filmic-toe-engine.ts  filmic-toe.ts  highlight-rolloff-engine.ts  highlight-rolloff.ts  shadow-lift-engine.ts  shadow-lift.ts
src/adjustments/curves/: RGB-engine.ts  RGB.ts  RGBcomposite-engine.ts  RGBcomposite.ts  parametric-engine.ts  parametric.ts
src/adjustments/dehaze/: dehaze-engine.ts  dehaze.ts
src/adjustments/exposure/: exposure-engine.ts  exposure.ts
src/black-and-white/: black-and-white-engine.ts  black-and-white-logic.ts  curvy.ts
src/export/: export-engine.ts  export-payload.ts
src/manual-tweaks/: tweakableKeys.ts
src/my-looks/: MyLooksDrawer.tsx  MyLooksSaveModal.tsx  myLooksStorage.ts  myLooksTypes.ts
src/shared/: glitterText.tsx  original-analysis.ts  season-types.ts
src/theme/: theme.ts
src/user-manual/: manualContent.ts  user-manual.tsx
(+50 files in other folders)
