[package]
name = "seasonal-color-engine"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# Core Tauri runtime must match your CLI version
tauri = { version = "2.10.1", features = [] }

# Plugins (must use versions compatible with Tauri v2 schema)
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-shell = "2.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
